--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@
 #    pip-compile staging.in
 #
 argparse==1.4.0           # via progressbar2
+dj-database-url==0.4.0
 django-cors-headers==1.1.0
 django-crispy-forms==1.6.0
 django-dotenv==1.4.1
@@ -15,8 +16,11 @@ django-rest-swagger==0.3.5
 django-stdimage==2.3.2
 django==1.9.4
 djangorestframework==3.3.2
+gunicorn==19.4.5
 markdown==2.6.5
 pillow==3.1.1             # via django-stdimage
 progressbar2==3.6.2       # via django-stdimage
+psycopg2==2.6.1
 PyYAML==3.11              # via django-rest-swagger
 Unipath==1.1
+whitenoise==2.0.6
